<resources>
    <string name="app_name">Hydroquinone Analyzer</string>
    <string name="action_settings">Settings</string>
    <string name="lakukan_scan">Lakukan Scan</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="sample_name">Masukan Nama Sample</string>
    <string name="save_data">Simpan Hasil</string>
    <string name="concentration_unit">&#160;ppm</string>
    <string name="konsentrasi">Konsentrasi&#160;:&#160;</string>
    <string name="RGB">RGB&#160;:&#160;</string>
    <string name="tingkat_hq">Tingkat&#160;HQ&#160;:&#160;</string>
    <string name="status">Status&#160;:&#160;</string>
    <string name="percent">&#160;%</string>
    <string name="choose_picture">Ambil gambar</string>
    <string name="no_data">Tidak ada data hasil perhitungan</string>
    <string name="guide">Panduan</string>
    <string name="scan">Scan</string>
    <string name="sample">Sampel</string>
    <string name="curve">Kurva</string>
    <string name="new_sample">Hasil Sampel Terbaru</string>
    <string name="empty_data">Empty Data</string>
    <string name="delete_sample">Hapus Sampel</string>
    <string name="sample_search_hint">Cari nama sampel</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="next">Selanjutnya</string>
    <string name="get_started">Mulai</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="pick_photo">Pilih Foto</string>
    <string name="calculation_proses">Melakukan Perhitungan</string>
    <string name="show_result">Menampilkan Hasil</string>

    <string name="choose_photo_info">Pilih foto yang akan dipindai, pemilihan foto dapat dipilih melalui gallery atau dengan mengambil gambar menggunakan kamera</string>
    <string name="calculation_info">Aplikasi akan melakukan perhitungan konsentrasi hidrokuionon melalui data gambar yang telah di pilih</string>
    <string name="result_info">Aplikasi akan menampilkan hasil perhitungan berdasarkan hasil perhitungan yang telah selesai dilakukan</string>
    <string name="choose_photo">Pilih foto yang akan dipindai</string>
    <string name="make_standard_curve">Buat Kurva Standar</string>
    <string name="add_data">Tambah Data</string>
    <string name="standard_curve_name">Nama Kurva Standar</string>

</resources>
